# rust_dynamodb

./: .gitignore  Cargo.toml  README.md
src/: main.rs
