[package]
name = "dynamodb"
version = "0.1.0"
authors = ["Joe Hance <jwh20@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.2.0"
rusoto_core = {version = "0.46.0"}
rusoto_credential = {version = "0.46.0"}
rusoto_dynamodb = {version = "0.46.0", optional = false}

[features]
# all = ["dynamodb"]
# dynamodb = ["rusoto_dynamodb"]